add search song function

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>demo-guitar-site</title>
+    <title>Nepali Guitar Tabs</title>
 </head>
 <body>
     <header>
@@ -17,19 +17,20 @@
     <div class="intro-list">
         <h1>Intro/Solo</h1>
         <ul>
-            <li>Din-Anuprastha</li>
-            <li>Hotel California</li>
+            <li class="song-item"><a href="din.html" >Din - Anuprastha</a></li>
+            <li class="song-item"><a href="hotel_california.html" >Hotel California - Eagles</a></li>
         </ul>
     </div>
     <div class="chord-list">
         <h1>Chords</h1>
         <ul>
-            <li>Wonderwall</li>
-            <li>Gurasai Fulyo</li>
+            <li class="song-item"><a href="din.html" >Wonderwall - Oasis</a></li>
+            <li class="song-item"><a href="din.html" >Gurasai Fulyo - Nepathya</a></li>
         </ul>
     </div>
     <footer>
         © 2025 Nepali Guitar tabs
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
